# Autonomous-Exploration

./: ANALYSIS_AND_FIXES.md  COMPLETE_EXECUTION_TRACE.md  EXECUTION_FLOW.md  EXECUTION_VERIFICATION.md  FIX_SUMMARY.md  INDEX.md  PHASE_X_SUMMARY.md  README.md  README_PHASE_X.md  REPOSITORY_CHANGES.md  package.xml  setup.cfg
launch/: sim_launch.py
src/: main.py
src/core/: __init__.py  config.py  config_types.py  interfaces.py  logger.py  pipeline_impl.py  world_generation_pipeline.py
src/experiment/: __init__.py  runner.py
src/experiments/: __init__.py  batch_runner.py  benchmark_runner.py  csv_logger.py  experiment_runner.py  parameter_sweep.py  scenario_manager.py  scenarios.py
src/gazebo/: sdf_templates.py  world_builder.py  world_exporter.py
src/metrics/: __init__.py  exploration_metrics.py  mapping_metrics.py  metrics_collector.py  metrics_schema.py  report_generator.py  summary_statistics.py  terrain_difficulty_analyzer.py
src/noise/: __init__.py  base_noise.py  fractal_noise.py  noise_factory.py  noise_generator.py  perlin_noise.py  simplex_noise.py
src/obstacles/: barrier_wall_generator.py  dead_end_generator.py  forest_cluster_generator.py  narrow_passage_generator.py  obstacle_factory.py  obstacle_generator.py  obstacle_models.py  obstacle_utils.py  rock_field_generator.py  sdf_exporter.py  visualization.py
src/ros_nodes/: world_node.py
src/terrain/: heightmap_exporter.py  (+6 more)
testes/: test_config.py  test_experiment.py  test_integration_end_to_end.py  test_logger.py  test_metrics.py  test_noise.py  test_pipeline_unit.py  test_terrain.py
