<?xml version="1.0"?>
<package format="3">
  <name>autonomous_exploration</name>
  <version>0.0.1</version>
  <description>Gazebo world/terrain/obstacle generator for exploration experiments</description>

  <maintainer email="you@example.com">Repo Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
</package>
